@@ -44,6 +44,7 @@ public:
   virtual ~EntryTitleModel();
 
   virtual int columnCount(const QModelIndex& parent = QModelIndex()) const;
+  virtual QVariant headerData(int section, Qt::Orientation orientation, int role = Qt::DisplayRole) const;
   virtual QVariant data(const QModelIndex& index, int role = Qt::DisplayRole) const;
 
 private:
